# psyplot-ci-orb

./: .gitattributes  .gitignore  MANIFEST.in  README.md  setup.cfg
.circleci/: config.yml  test-deploy.yml
src/: @orb.yml
src/commands/: build-docs.yml  build-recipe.yml  build_docs.yml  check-for-release.yml  codecov.yml  conda-list.yml  conda_build.yml  configure-conda.yml  configure-git.yml  configure-recipe.yml  configure_conda.yml  create-release.yml  create-tag.yml  deploy-docs.yml  deploy-pkg.yml  deploy-pypi.yml  deploy_docs.yml  deploy_pkg.yml  install-conda.yml  install-opengl.yml  install-packages.yml  install.yml  install_miniconda.yml  install_opengl.yml  run-job.yml  run-parallel-tests.yml  setup-conda-env.yml  test-dist.yml  test-docs.yml  trigger-release-workflow.yml
src/executors/: default.yml  macos.yml
src/jobs/: build-docs.yml  check-for-release.yml  create-tag.yml  deploy-docs.yml  deploy-pkg.yml  deploy-pypi.yml  install-and-build.yml  install-and-test-parallel.yml  test-docs.yml  test-parallel.yml  trigger-release-workflow.yml
src/python/psyplot_ci_orb/: __init__.py  _version.py  show_package_name.py
src/scripts/: build-docs.sh  build-recipe copy.sh  build-recipe.sh  build_docs.sh  check-for-release.sh  conda-info.sh  conda-list.sh  conda_build.sh  configure-conda.sh  configure-git.sh  configure-recipe.sh  configure_conda.sh  create-release.sh  create-tag.sh  deploy-docs.sh  deploy-pkg.sh  deploy-pypi.sh  deploy_docs.sh  deploy_pkg.sh  install-conda.sh  install-opengl.sh  install-packages.sh  install_miniconda.sh  install_opengl.sh  run-parallel-tests.sh  setup-conda-env.sh  test-dist.sh  test-docs.sh  trigger-release-workflow.sh
src/tests/: 01-install-conda.bats  01_install_miniconda.bats  02-configure-conda.bats  02_configure_conda.bats  03-install-opengl.bats  03_install_opengl.bats  04-build-recipe.bats  04_conda_build.bats  05-build-docs.bats  05_build_docs.bats  06-deploy-docs.bats  06_deploy_docs.bats  07-deploy-pkg.bats  07_deploy_pkg.bats  08-configure-recipe.bats  09-setup-conda-env.bats  10-install-packages.bats  10-run-parallel-tests.bats  11-run-parallel-tests.bats  12-create-tag.bats  13-test-dist.bats  14-conda-list.bats  configure_conda.bats  install_miniconda.bats  install_opengl.bats
src/tests/test-docs/: environment.yml  index.rst
src/tests/test-tests/: environment.yml  test_1.py  test_2.py
