[metadata]
name = psyplot-ci-orb
description = CI tools for the psyplot organization
long_description = file: README.rst
url = https://github.com/psyplot/psyplot-ci-orb
author = Phiilpp S. Sommer
author_email = philipp.sommer@hzg.de
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
include_package_data = true
python_requires = >=3.6
package_dir =
    psyplot_ci_orb = src/python/psyplot_ci_orb
packages = psyplot_ci_orb
install_requires =
    anaconda-client
    conda-build

[options.entry_points]
console_scripts =
    deploy-conda-recipe = psyplot_ci_orb:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/python/psyplot_ci_orb/_version.py
versionfile_build = psyplot_ci_orb/_version.py
tag_prefix = v
parentdir_prefix = psyplot-ci-orb-

[mypy]
ignore_missing_imports = True
